Fix weird horizontal scroll issue

--- a/css/main.css
+++ b/css/main.css
@@ -341,7 +341,6 @@ hr.fancy-line:after {
 hr.fancy-line:before, hr.fancy-line:after {
   content:            '';
   position:           absolute;
-  width:              100%;
   }
 
 hr.fancy-line {
